// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text-Editor Component Will render default props 1`] = `
<div
  className=" d-flex flex-column align-items-center"
>
  <div
    className="text-editor-container"
  >
    <Quill
      modules={Object {}}
      onChange={[Function]}
      theme="bubble"
      value=""
    />
  </div>
  <sub
    className="mt-2"
  >
    select text to view formatting
  </sub>
</div>
`;

exports[`Text-Editor Component Will render with value passed as prop 1`] = `
<div
  className=" d-flex flex-column align-items-center"
>
  <div
    className="text-editor-container"
  >
    <Quill
      modules={Object {}}
      onChange={[Function]}
      theme="bubble"
      value="<p>testing 123</p>"
    />
  </div>
  <sub
    className="mt-2"
  >
    select text to view formatting
  </sub>
</div>
`;
